--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.23",
     "gsap": "^3.12.2",
-    "lottie-react": "^2.4.0"
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2"
   }
 }
